--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mentor rolling",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-encode": "^1.0.1",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
     "underscore": "^1.13.1"
